# backend/endpoints.go
@@ -39,14 +39,15 @@ func ServerTime(c *gin.Context) {
 
 // SearchName godoc
 //
-//	@Summary	how to use the name search endpoint
-//	@Schemes
-//	@Description	do ping
-//	@Tags			GET Requests
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	structs.NameSearchResults
-//	@Router			/search [get]
+//		@Summary	Search through lifter names
+//		@Schemes
+//		@Description	Looks up a lifter by name and returns a list of possible matches. Requires a minimum of 3 characters.
+//		@Tags			GET Requests
+//	 @Param name query string true "name"
+//		@Accept			json
+//		@Produce		json
+//		@Success		200	{object}	structs.NameSearchResults
+//		@Router			/search [get]
 func SearchName(c *gin.Context) {
 	const maxResults = 50
 	if len(c.Query("name")) >= 3 {
@@ -64,12 +65,13 @@ func SearchName(c *gin.Context) {
 //
 //		@Summary	Pull a specific event by name
 //		@Schemes
-//		@Description	Requires a case-sensitive event name to be passed to it.
+//		@Description	Requires a case-sensitive event name to be passed to it. This is still a work in progress.
 //		@Tags			POST Requests
 //	 @Param name body string true "name"
 //		@Accept			json
 //		@Produce		json
 //		@Success		200	{array}	 []structs.Entry
+//		@Failure		204	{object}	nil
 //		@Router			/event [post]
 func EventResult(c *gin.Context) {
 	eventSearch := structs.NameSearch{}
@@ -86,14 +88,16 @@ func EventResult(c *gin.Context) {
 
 // LifterRecord godoc
 //
-//	@Summary	how to use the lifter record endpoint
-//	@Schemes
-//	@Description	do ping
-//	@Tags			POST Requests
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	structs.ChartData
-//	@Router			/lifter [post]
+//		@Summary	Retrieve a lifter's record for use with ChartJS
+//		@Schemes
+//		@Description	This is used within the lifter page to display a lifter's record. It returns a JSON object that can be used with ChartJS without having to do any additional processing.
+//		@Tags			POST Requests
+//	 @Param name body string true "name"
+//		@Accept			json
+//		@Produce		json
+//		@Success		200	{object}	structs.ChartData
+//	 @Failure		204	{object}	nil
+//		@Router			/lifter [post]
 func LifterRecord(c *gin.Context) {
 	lifterSearch := structs.NameSearch{}
 	if err := c.BindJSON(&lifterSearch); err != nil {
@@ -112,14 +116,16 @@ func LifterRecord(c *gin.Context) {
 
 // LifterHistory godoc
 //
-//	@Summary	how to use the lifter history endpoint
-//	@Schemes
-//	@Description	do ping
-//	@Tags			POST Requests
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	structs.LifterHistory
-//	@Router			/history [post]
+//		@Summary	Retrieve a lifter's history
+//		@Schemes
+//		@Description	Pull a lifter's history by name. The name must be an exact match and can be checked using the search endpoint.
+//		@Tags			POST Requests
+//	 @Param name body string true "name"
+//		@Accept			json
+//		@Produce		json
+//		@Success		200	{object}	structs.LifterHistory
+//	 @Failure		204	{object}	nil
+//		@Router			/history [post]
 func LifterHistory(c *gin.Context) {
 	lifterSearch := structs.NameSearch{}
 	if err := c.BindJSON(&lifterSearch); err != nil {
@@ -144,14 +150,14 @@ func LifterHistory(c *gin.Context) {
 //		@Description	This is the used on the index page of the website and pulls the highest single lift for a lifter within the selected filter.
 //		@Tags			POST Requests
 //
-//	 @Param start query int false "start"
-//	 @Param stop query int false "stop"
-//	 @Param sortby query string false "sortby"
-//	 @Param federation query string false "federation"
-//	 @Param weightclass query string false "weightclass"
-//	 @Param year query int false "year"
-//	 @Param startdate query string false "startdate"
-//	 @Param enddate query string false "enddate"
+//	 @Param start query int false "Position to begin from within the full query"
+//	 @Param stop query int false "Position to stop at within the full query"
+//	 @Param sortby query string false "Sort by either total or sinclair"
+//	 @Param federation query string false "Federation or country to filter by"
+//	 @Param weightclass query string false "Weightclass to filter by"
+//	 @Param year query int false "Year to filter by"
+//	 @Param startdate query string false "Not currently used"
+//	 @Param enddate query string false "Not currently used"
 //
 //		@Accept			json
 //		@Produce		json
